fix/NNO-12501 Сделать по умолчанию min-rows=1 для <text-area> в ячейке <edit>,...